interaccion con bd commit

--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
           <h6 class="alert alert-primary" role="alert" id="jsonData"></h6>
         </section>
         <section class="visible">
-          <div class="input-group mb-2">
-            <button type="button" class="btn btn-secondary" id="conectar">Conectar</button>
-          </div>
           <h6 class="alert alert-primary" role="alert" id="jsonDataBD"></h6>
         </section>
         <hr />
@@ -78,8 +75,10 @@
               placeholder="en aca se aceptan los mensajes"></textarea>
             <label for="mensajetxt">Comments</label>
           </div>
-          <input class="btn btn-success" type="button" id="enviar" value="enviar" />
-          <input class="btn btn-success" type="button" id="enviarBD" value="enviar bd" />
+          <input class="btn btn-success" type="button" id="enviar" value="Enviar" />
+          <div class="input-group mb-2">
+            <button type="button" class="btn btn-secondary" id="conectar">Enviar</button>
+          </div>
         </article>
         <hr />
         <h5 id="message-status"></h5>
