--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="dark">
+<html lang="es" data-bs-theme="light">
 
 <head>
   <meta charset="UTF-8" />
@@ -25,7 +25,7 @@
   </style>
 
   <header class="navbar bg-body-tertiary p-2 fixed-top z-3">
-    <button id="toggle-theme" class="btn btn-light">Cambiar tema</button>
+    <button id="toggle-theme" class="btn btn-dark">Cambiar tema</button>
     <h3>Estado: <strong id="estado"></strong></h3>
     <h3>Internet: <strong id="status"></strong></h3>
     <input class="btn btn-danger" type="button" id="eliminar" value="Cerrar Sesion" />
@@ -55,9 +55,9 @@
       </div>
       <div class="col-6">
         <section class="mb-3">
-          <h4>Como desea Usar</h4>
+          <h4>Via</h4>
           <input type="button" class="btn btn-success" id="excel" value="Excel">
-          <input type="button" class="btn btn-secondary" id="bd" value="Base de Datos">
+          <input type="button" class="btn btn-secondary" id="bd" value="Tracking BO">
         </section>
         <section id="verEXCEL">
           <div class="input-group mb-2">
