--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <header class="navbar bg-body-tertiary p-2 fixed-top z-3">
     <button id="toggle-theme" class="btn btn-dark">Cambiar tema</button>
     <h3>Estado: <strong id="estado"></strong></h3>
+    <h3>Usuario: <strong id="user"></strong></h3>
     <h3>Internet: <strong id="status"></strong></h3>
     <input class="btn btn-danger" type="button" id="eliminar" value="Cerrar Sesion" />
   </header>
@@ -54,17 +55,18 @@
         </div>
       </div>
       <div class="col-7">
-        <!-- <section class="mb-3">
-          <h4>Via</h4>
-          <input type="button" class="btn btn-success" id="excel" value="Excel">
-          <input type="button" class="btn btn-secondary" id="bd" value="Tracking BO">
-        </section> -->
         <section id="verEXCEL">
-          <div class="input-group mb-2">
-            <input type="file" class="form-control" name="excel" id="fileUpload" accept=".xls,.xlsx" />
-            <button type="button" class="btn btn-success" id="uploadExcel">Aceptar</button>
-          </div>
-          <h6 class="alert alert-primary" role="alert" id="jsonData"></h6>
+          <div class="row">
+            <div class="col-2">
+              <a href="Plantilla.xlsx" class="btn btn-success" download="Plantilla.xlsx">Plantilla</a>
+            </div>
+            <div class="col-10">
+              <div class="input-group mb-2 ">
+                <input type="file" class="form-control" name="excel" id="fileUpload" accept=".xls,.xlsx" />
+                <button type="button" class="btn btn-success" id="uploadExcel">Aceptar</button>
+              </div>
+            </div>
+            <h6 class="alert alert-primary" role="alert" id="jsonData"></h6>
         </section>
         <section id="verBD">
           <h6 class="alert alert-primary" role="alert" id="jsonDataBD"></h6>
