--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="staticBackdropLabel">Validacion</h1>
+              <h1 class="modal-title fs-5" id="staticBackdropLabel"></h1>
               <button type="button" class="btn btn-secondary" id="cerrar" data-bs-dismiss="modal">Close</button>
             </div>
             <div class="modal-body" align="center">
